updated phone styling for 961 px break point

--- a/main.css
+++ b/main.css
@@ -73,9 +73,9 @@ h2 {
 
 #hero-phone {
   max-width: 90%;
-  height: 82%;
+  height: 81%;
   position: relative;
-  top: 81px; }
+  top: 89px; }
 
 #app-buttons-wrapper {
   margin: 8vh 0 0 0; }
@@ -195,3 +195,23 @@ button {
 button:hover {
   background: #EACA85;
   border: 2px solid #EACA85; }
+
+#start-selling {
+  height: 50vh;
+  background: #EACA85;
+  padding: 2em; }
+  #start-selling h3 {
+    margin: .5em 0; }
+  #start-selling input {
+    display: block;
+    margin: 3em auto;
+    box-shadow: 0px 8px 17px 0px rgba(0, 0, 0, 0.48);
+    height: 3em;
+    width: 19em;
+    border: none;
+    border-radius: 0.25em; }
+  #start-selling button {
+    display: block;
+    margin: auto;
+    background: black;
+    color: white; }
