--- a/main.scss
+++ b/main.scss
@@ -165,8 +165,16 @@ h3 {
     margin: auto;
     padding: 2vh 0;
   }
-  ul {
+  .client-text {
+    width: 46vw;
+    margin: auto;
     display: inline-block;
+    div {
+      margin: 1em 0;
+    }
+  }
+  ul {
+    display: inline;
   }
 }
 
@@ -198,7 +206,7 @@ h3 {
 .arrows {
   // vertical-align: top;
   // padding: 1em 0 0 0;
-  display: inline;
+  display: inline-block;
 }
 
 .text-white {
@@ -221,6 +229,12 @@ h3 {
   }
   li {
     // display: inline-block;
+  }
+  p {
+    // display: inline-block;
+  }
+  div {
+    display: inline-block;
   }
 }
 
@@ -295,5 +309,9 @@ button:hover {
     background: black;
     color: white;
   }
+}
+
+.hidden {
+  display: none;
 }
 
