What clients are saying carousel working

--- a/main.scss
+++ b/main.scss
@@ -191,6 +191,8 @@ h3 {
     background: none;
     border: none;
     max-width: 12em;
+    position: relative;
+    bottom: 13em;
   }
   li {
     display: inline-block;
