--- a/main.css
+++ b/main.css
@@ -146,7 +146,9 @@ h3 {
     border-radius: 100%;
     background: none;
     border: none;
-    max-width: 12em; }
+    max-width: 12em;
+    position: relative;
+    bottom: 13em; }
   .client-quote li {
     display: inline-block;
     width: 46vw;
