--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,12 @@
+$white: #fff;
+$black: #4B4B4B;
+$yellow: #EACA85;
+$gray: #666;
+
+$mont-font: 'Montserrat', sans-serif;
+$source-font: 'Source Sans Pro', sans-serif;
+
+
 * {
   margin: 0;
   padding: 0;
@@ -5,14 +14,9 @@
   list-style-type: none;
   font-family: sans-serif;
   box-sizing: border-box;
+  font-family: $mont-font;
 }
 
-$white: #fff;
-$black: #4B4B4B;
-$yellow: #EACA85;
-
-$mont-font: 'Montserrat', sans-serif;
-$source-font: 'Source Sans Pro', sans-serif;
 
 
 body {
@@ -43,11 +47,23 @@ body {
 nav {
   padding: 3vh 0;
   height: 10vh;
+  img {
+    width: 1.75em;
+  }
 }
 
 #navigate {
   display: inline-block;
   float: right;
+  ul:last-child {
+    img {
+      // color: white;
+    }
+    li {
+      margin: 0 1.5vw 0 0;
+
+    }
+  }
 }
 
 #navigate ul {
@@ -55,16 +71,14 @@ nav {
 }
 
 #navigate ul:first-child {
-  margin: 0 6vw;
-}
-
-#navigate ul:first-child li {
   margin: 0 1vw 0 0;
+  li {
+    margin: 0 2vw 0 0;
+    font-size: .75em;
+    
+  }
 }
 
-#navigate ul:last-child li {
-  margin: 0 1.5vw 0 0;
-}
 
 #navigate li {
   color: #FFF;
@@ -72,38 +86,47 @@ nav {
 }
 
 #landing-script {
-    color: white;
-    display: inline-block; 
-    width: 40%;
-    float: left;
-    margin: auto 9%;
+  color: white;
+  display: inline-block; 
+  width: 40%;
+  float: left;
+  margin: auto 9%;
+  p:first-child {
+    font-size: .7em;
+  }
 }
 
 h1 {
-  color: #F0D896; /*app-yellow*/
-  margin: 18vh 0 6vh 0;
-  font-size: 61px;
+  color: #F0D896;
+  margin: 16vh 0 6vh 0;
+  font-size: 2.7em;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: .9em;
   margin: 0 0 4vh 0;
 }
 
-#landing-script p:last-child {
-  font-size: 14px;
-  margin: 0 0 10vh 0;
+#landing-script {
+  #landing-text {
+    font-size: .2em;
+    line-height: 2;
+    margin: 0 0 10vh 0;
+  }
 }
 
 #hero-phone {
-  max-width: 90%;
-  height: 81%;
+  max-width: 89%;
+  height: 80%;
   position: relative;
   top: 94px;
 }
 
 #app-buttons-wrapper {
   margin: 8vh 0 0 0;
+  img {
+    width: 5.7em;
+  }
 }
 
 #inner-results {
@@ -125,29 +148,38 @@ h2 {
 h3 {
   text-align: center;
   /*border: 1px solid red;*/
-  font-size: 2em;
+  font-size: 1.8em;
   margin: 1em 0;
 }
 
 .sub-heading {
   text-align: center;
-  width: 46%;
+  width: 41%;
   margin: auto;
+  font-size: .2em;
+  line-height: 2;
 }
 
 .results-col-3 {
   width: 20%;
   margin: 0 3%;
-  .results-col-title {
-    margin: 1em 0;
-  }
   ul {
     min-width: 254px;
   }
 }
 
+.results-col-title {
+  margin: 1em 0;
+  font-size: .7em;
+}
+
+.results-col-text {
+  font-size: .6em;
+
+}
+
 .data-circles {
-  width: 100%;
+  width: 67%;
   height: auto; 
   /*border: 1px solid red;*/
 
@@ -281,7 +313,7 @@ button {
   background: #FFF;
   border-radius: 2em;
   color: #000;
-  /* font-size: 15px; */
+  font-size: .8em;
   padding: .6em 3em;
   border: 2px solid $black;
 }
@@ -338,6 +370,16 @@ button:hover {
     width: 38vw;
     height: 32vh;
     position: relative;
+    border-radius: 8px;
+    box-shadow: 0px 8px 17px 0px rgba(0, 0, 0, 0.48);
+    p {
+      font-size: .7em;
+      margin: 0em 0 0 1em;
+      line-height: 2;
+      font-family: $source-font;
+
+    }
+
   }
   .people-1 {
     background: $yellow;
@@ -349,6 +391,7 @@ button:hover {
     position: absolute;
     top: 4em;
     left: 29em;
+    color: white;
   }
   .carousel-radio {
     display: inline;
@@ -378,6 +421,11 @@ button:hover {
     }
 }
 
+.people-name {
+  font-weight: bold;
+}
+
+
 .carousel-wrapper-two {
   .center-quote {
     margin: 2em 47%;
@@ -402,7 +450,7 @@ button:hover {
     color: white;
   }
   form {
-    background: #666;
+    background: $gray;
     width: 15em;
     margin: auto;
     height: 16em;
@@ -416,7 +464,7 @@ button:hover {
     input, textarea {
       display: block;
       width: 12em;
-      margin: 1em auto;
+      margin: 0em auto .7em auto;
     }
     button {
       margin: auto;
@@ -427,9 +475,61 @@ button:hover {
       width: 1em;
     }
   }
+  ul {
+    text-align: center;
+    li {
+      display: inline-block;
+      color: white;
+    }
+  }
 }
 
+// FOOTER ////////
 
+footer {
+  height: 50vh;
+  background: $gray;
+  .footer-wrapper {
+    text-align: center;
+    height: 72%;
+    border-bottom: 1px solid white;
+    display: block;
+    width: 80%;
+    margin: auto;
+    .footer-col-4 {
+      color: white;
+      display: inline-flex;
+      width: 20%;
+      .footer-title {
+        font-weight: bold;
+        padding: 1em 0;
+        margin: 1em 0;
+        border-bottom: 1px solid white;
+      }
+      li {
+        text-align: left;
+      }
+    }
+  }
+}
+
+.col-width {
+  width: 90%;
+  text-align: center;
+}
+
+#credits {
+  display: inline-block;
+  float: left;
+  p {
+    color: white;
+  }
+}
+
+#social-wrapper {
+  display: inline-block;
+  float: right;
+}
 
 
 
