--- a/main.css
+++ b/main.css
@@ -115,6 +115,22 @@ h3 {
   margin: 0 3%; }
   .results-col-3 ul {
     min-width: 254px; }
+    .results-col-3 ul li {
+      position: relative; }
+      .results-col-3 ul li p:first-child {
+        position: absolute;
+        top: .8em;
+        left: 1.2em;
+        font-size: 3em;
+        z-index: 1;
+        color: #4B4B4B; }
+      .results-col-3 ul li p:nth-child(2) {
+        position: absolute;
+        z-index: 1;
+        font-size: 1.5em;
+        top: 2.6em;
+        left: 4.6em;
+        color: #4B4B4B; }
 
 .results-col-title {
   margin: 1em 0;
@@ -340,10 +356,12 @@ button:hover {
       display: inline;
       width: 1em; }
   #get-in-touch ul {
-    text-align: center; }
+    text-align: center;
+    margin: 3em; }
     #get-in-touch ul li {
       display: inline-block;
-      color: white; }
+      color: white;
+      margin: 1em; }
 
 footer {
   height: 50vh;
@@ -358,14 +376,17 @@ footer {
     footer .footer-wrapper .footer-col-4 {
       color: white;
       display: inline-flex;
-      width: 20%; }
+      width: 20%;
+      font-size: .7em;
+      line-height: 2; }
       footer .footer-wrapper .footer-col-4 .footer-title {
         font-weight: bold;
         padding: 1em 0;
         margin: 1em 0;
         border-bottom: 1px solid white; }
       footer .footer-wrapper .footer-col-4 li {
-        text-align: left; }
+        text-align: left;
+        font-size: .7em; }
 
 .col-width {
   width: 90%;
